--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@rollup/plugin-alias": "^5.0.0",
     "@rollup/plugin-babel": "^6.0.3",
+    "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-image": "^3.0.2",
     "@rollup/plugin-node-resolve": "^15.2.0",
     "@rollup/plugin-replace": "^5.0.2",
@@ -53,6 +54,7 @@
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^26.3.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "clean-css": "^5.3.2",
     "eslint": "^8.47.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -351,6 +353,7 @@
     "reusify": "^1.0.4",
     "rimraf": "^3.0.2",
     "rollup": "^3.28.0",
+    "rollup-plugin-babel": "^4.4.0",
     "rollup-pluginutils": "^2.8.2",
     "run-parallel": "^1.2.0",
     "safe-buffer": "^5.2.1",
@@ -419,5 +422,9 @@
     "ws": "^7.5.9",
     "yallist": "^4.0.0",
     "yaml": "^1.10.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/haha58/lego_mowy.git"
   }
 }
