--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "build:umd": "set NODE_ENV=production && rollup --config ./build/rollup.umd.config.js",
     "preview": "vite preview",
     "test": "jest --clearCache && jest test",
-    "prepublishOnly": "npm run lint && npm run test && npm run build"
+    "prepublishOnly": "npm run lint && npm run test && npm run build",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "peerDependencies": {
     "vue": "^3.2.13"
@@ -66,8 +68,10 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-vue": "^9.17.0",
+    "husky": "^8.0.0",
     "jest": "^26.6.3",
     "less": "^4.2.0",
+    "lint-staged": "^15.1.0",
     "lodash-es": "^4.17.21",
     "prettier": "^3.0.2",
     "rollup-plugin-commonjs": "^10.1.0",
@@ -84,6 +88,19 @@
     "vite": "^4.4.5",
     "vue-jest": "^5.0.0-alpha.5",
     "vue-tsc": "^1.8.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "node scripts/verify-commit.js"
+    }
+  },
+  "lint-staged": {
+    "*.{js,vue,jsx,tsx}": [
+      "prettier --write",
+      "eslint --cache --fix",
+      "git add"
+    ]
   },
   "repository": {
     "type": "git",
