--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged",
+      "pre-commit": "npm test&& lint-staged",
       "commit-msg": "node scripts/verify-commit.js"
     }
   },
