--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run test && lint-staged",
+      "pre-commit": "npm run lint && npm run test && lint-staged",
       "commit-msg": "node scripts/verify-commit.js"
     }
   },
