--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,36 @@
 language: node_js
-node_js:
-  - node
+
+node_js: stable
+
+cache:
+  directories:
+    - node_modules
+
+install:
+  - npm i
+
+script:
+  - npm run build
+
+
+#after_script前5句是把部署分支的.git文件夹保护起来，用于保留历史部署的commit日志，否则部署分支永远只有一条commit记录。
+#命令里面的变量都是在Travis CI里配置过的。
+after_script:
+  - git clone https://${GITHUB_REPO} .temp
+  - cd .temp
+  - git checkout gh-pages
+  - cd ../
+  - mv .temp/.git dist
+  - cd dist
+  - git config user.name "${USER_NAME}"
+  - git config user.email "${USER_EMAIL}"
+  - git add .
+  - git commit -m ":construction_worker:- Build & Deploy by Travis CI"
+  - git push --force --quiet "https://${GITHUB_REPO_TOKEN}@${GITHUB_REPO}" gh-pages:master
+# E: Build LifeCycle
+
+# 只有指定的分支提交时才会运行脚本
+branches:
+  only:
+    - master
+
