--- a/.travis.yml
+++ b/.travis.yml
@@ -2,15 +2,13 @@ language: node_js
 
 node_js: stable
 
-cache:
-  directories:
-    - node_modules
+cache: yarn
 
 install:
-  - npm i
+  - yarn
 
 script:
-  - npm run build
+  - yarn build
 
 
 #after_script前5句是把部署分支的.git文件夹保护起来，用于保留历史部署的commit日志，否则部署分支永远只有一条commit记录。
