--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lego-momy",
   "private": false,
-  "version": "0.0.7",
+  "version": "0.0.8",
   "type": "module",
   "main": "dist/lego-momy.esm.js",
   "module": "dist/lego-momy.esm.js",
@@ -99,5 +99,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/haha58/lego_mowy.git"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
